external-crates/move/crates/move-compiler/tests/development/enums/matching/unused_binding.exp
error[E13003]: feature is under active development
  ┌─ tests/development/enums/matching/unused_binding.move:3:17
  │
3 │     public enum Option<T> {
  │                 ^^^^^^ Enums are not supported in bytecode.
  │
  = This feature is currently in development.

warning[W09002]: unused variable
   ┌─ tests/development/enums/matching/unused_binding.move:10:26
   │
10 │             Option::Some(x) => 0, // x unused
   │                          ^ Unused local variable 'x'. Consider removing or prefixing with an underscore: '_x'
   │
   = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning[W09002]: unused variable
   ┌─ tests/development/enums/matching/unused_binding.move:17:26
   │
17 │             Option::Some(x) => default, // x unused
   │                          ^ Unused local variable 'x'. Consider removing or prefixing with an underscore: '_x'
   │
   = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

